
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int u_char ;


 int MAXLABEL ;
 char* malloc (int ) ;
 int sprintf (char*,char*,int,int,int,int) ;

char *ip2InAddrStr(u_long ip)
{
 static char *str;
 u_char *byte;

 if(!str)
 {
  if((str=malloc(MAXLABEL)) == ((void*)0))
   return(str);
 }


 byte = (u_char *)&ip;
 sprintf(str, "%d.%d.%d.%d.IN-ADDR.ARPA.", byte[3], byte[2], byte[1],
  byte[0]);

 return(str);
}
