; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_20490.c_ip2InAddrStr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_20490.c_ip2InAddrStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ip2InAddrStr.str = internal global i8* null, align 8
@MAXLABEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"%d.%d.%d.%d.IN-ADDR.ARPA.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ip2InAddrStr(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i8*, i8** @ip2InAddrStr.str, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %14, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @MAXLABEL, align 4
  %9 = call i8* @malloc(i32 %8)
  store i8* %9, i8** @ip2InAddrStr.str, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i8*, i8** @ip2InAddrStr.str, align 8
  store i8* %12, i8** %2, align 8
  br label %30

13:                                               ; preds = %7
  br label %14

14:                                               ; preds = %13, %1
  store i32* %3, i32** %4, align 8
  %15 = load i8*, i8** @ip2InAddrStr.str, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 3
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 2
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %4, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @sprintf(i8* %15, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %18, i32 %21, i32 %24, i32 %27)
  %29 = load i8*, i8** @ip2InAddrStr.str, align 8
  store i8* %29, i8** %2, align 8
  br label %30

30:                                               ; preds = %14, %11
  %31 = load i8*, i8** %2, align 8
  ret i8* %31
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
